Version: 0.4.2
Date: 7.11.25
  Bugfixes:
    - Crash with bobs due to duplicate item in recipe.
  Changes:
    - Changelog 0.4.0 more info on AAI crashes.
    - Updated crafting category for RampantArsenalFork[item=combat-mech-armor-rampant-arsenal]
    - Updated crafting category for metal-and-stars [item=prototype-mech-armor]
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 5.11.25
  Changes:
    - Changelog info --> 0.4.0 removed.
  Bugfixes:
    - Rejected Symbol.
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 5.11.2025
  Major Features:
    - Settings added to other equipment for further customizability.
    - 1 Setting to Show all items in Players crafting UI.
    - 1 Amount setting for Armour Control Unit in scrap. 
    - 20 Armour Settings.
    - 20 Batteries Settings.
    - 15 Exoskeleton Settings
    - 20 Fission Settings.
    - 70 Laser Settings.
    - 8 Belt immunity Settings.
    - 8 NVGs Settings.
    - 70 Roboport Settings.
    - 50 Shield Settings.
    - 20 Solar Settings.
    - Total of 285 New settings for you to have fun with. Hope this mod became more fun than ever before?
    - [space-age] Recipes have been tweaked for: Armour, Battery, Exoskeleton, Fission, Immunity, Laser, NVGs, Roboport, Shield & SolarPanels.
    - [space-age] Recipe changes all over the equipment's & Amours So make sure that all your equipment is still crafting.
  Minor Features:
    - Recipes have been tweaked for: Armour, Battery, Exoskeleton, Fission, Immunity, Laser, NVGs, Roboport, Shield & SolarPanels.
    - Minor Changes for base mod game too. So look to see that your recipes are also still crafting in your assemblers.
  Features:
    - [space-age] Made it possible to craft all items in Electromagnetic Plant.
    - ACU recipe [space-age] Edition.