@@ -175,11 +175,11 @@ if mods["space-age"] then
             energy_required = 50.0,
             ingredients = {
                 {type="item", name="par-armour-mk1", amount=1},
-                {type="item", name="electronic-circuit", amount=25},
-                {type="item", name="copper-plate", amount=25},
-                {type="item", name="engine-unit", amount=25},
-                {type="item", name="steel-plate", amount=25},
-                {type="item", name="iron-plate", amount=25},
+                {type="item", name="electronic-circuit", amount=50},
+                {type="item", name="copper-plate", amount=50},
+                {type="item", name="engine-unit", amount=50},
+                {type="item", name="steel-plate", amount=50},
+                {type="item", name="iron-plate", amount=50},
             },
             results = {{type="item", name="par-armour-mk2", amount=1}},
         },
@@ -192,10 +192,10 @@ if mods["space-age"] then
             energy_required = 50.0,
             ingredients = {
                 {type="item", name="par-armour-mk2", amount=1},
-                {type="item", name="advanced-circuit", amount=50},
-                {type="item", name="plastic-bar", amount=50},
-                {type="item", name="steel-plate", amount=50},
-                {type="item", name="engine-unit", amount=50},
+                {type="item", name="advanced-circuit", amount=75},
+                {type="item", name="plastic-bar", amount=75},
+                {type="item", name="steel-plate", amount=75},
+                {type="item", name="engine-unit", amount=75},
             },
             results = {{type="item", name="par-armour-mk3", amount=1}},
         },
@@ -208,11 +208,11 @@ if mods["space-age"] then
             energy_required = 50.0,
             ingredients = {
                 {type="item", name="par-armour-mk3", amount=1},
-                {type="item", name="electric-engine-unit", amount=75},
-                {type="item", name="advanced-circuit", amount=75},
-                {type="item", name="iron-plate", amount=75},
-                {type="item", name="engine-unit", amount=75},
-                {type="item", name="plastic-bar", amount=75},
+                {type="item", name="electric-engine-unit", amount=100},
+                {type="item", name="advanced-circuit", amount=100},
+                {type="item", name="iron-plate", amount=100},
+                {type="item", name="engine-unit", amount=100},
+                {type="item", name="plastic-bar", amount=100},
             },
             results = {{type="item", name="par-armour-mk4", amount=1}},
         },
@@ -224,11 +224,11 @@ if mods["space-age"] then
             energy_required = 50.0,
             ingredients = {
                 {type="item", name="par-armour-mk4", amount=1},
-                {type="item", name="armour-control-unit", amount=100},
-                {type="item", name="electric-engine-unit", amount=100},
-                {type="item", name="processing-unit", amount=100},
-                {type="item", name="battery", amount=100},
-                {type="item", name="carbon", amount=100},
+                {type="item", name="armour-control-unit", amount=150},
+                {type="item", name="electric-engine-unit", amount=150},
+                {type="item", name="processing-unit", amount=150},
+                {type="item", name="battery", amount=150},
+                {type="item", name="carbon", amount=150},
             },
             results = {{type="item", name="par-armour-mk5", amount=1}},
         },
